--- a/setup.org
+++ b/setup.org
@@ -1,6 +1,5 @@
 #+TITLE: Sabin Pocris's Emacs
 #+AUTHOR: Sabin Pocris
-#+STARTUP: showeverything
 
 * init.el
 ** Package manager
@@ -23,11 +22,23 @@
   (setq use-package-always-ensure t)
 #+end_src
 
+*** auto-package-update
+#+begin_src emacs-lisp
+  ;;(use-package auto-package-update)
+  ;;:custom
+  ;;(auto-package-update-interval 7)
+  ;;(auto-package-update-prompt-before-update t)
+  ;;(auto-package-update-hide-results t)
+  ;;:config
+  ;;(auto-package-update-maybe)
+  ;;(auto-package-update-at-time "09:00"))
+#+end_src
+
 ** UI 
 *** Font
 #+begin_src emacs-lisp
   (add-to-list 'default-frame-alist
-	       '(font . "Anonymous Pro-23"))
+               '(font . "RobotoMono Nerd Font Mono-21"))
 #+end_src
 
 *** Disable Features
@@ -67,15 +78,15 @@
 
 *** Mini Frame
 #+begin_src emacs-lisp
-  (use-package mini-frame
-    :init
-    (mini-frame-mode)
-    :config
-    (custom-set-variables
-     '(mini-frame-show-parameters
-       '((top . 1)
-	 (width . 0.75)
-	 (left . 0.5)))))
+  ;;(use-package mini-frame
+  ;; :init
+  ;; (mini-frame-mode)
+  ;; :config
+  ;; (custom-set-variables
+  ;;  '(mini-frame-show-parameters
+  ;;    '((top . 1)
+  ;;(width . 0.75)
+  ;;(left . 0.5)))))
 #+end_src
 
 *** Yes or No, but Y
@@ -118,9 +129,22 @@
     (which-key-mode)
     (setq which-key-idle-delay 1))
 #+end_src
+
+*** Pixel wise resize
+#+begin_src emacs-lisp
+  (setq frame-resize-pixelwise t)
+#+end_src
+
 ** Backup
 #+begin_src emacs-lisp
   (setq backup-directory-alist '(("." . "~/.myEmacsBackups")))
+#+end_src
+
+** Performance
+*** Native Comp
+#+begin_src emacs-lisp
+  ;; Silence compiler warnings as they can be pretty disruptive
+  (setq comp-async-report-warnings-errors nil)
 #+end_src
 
 ** Shortcuts
@@ -140,101 +164,46 @@
 
 *** ESC quits prompts
 #+begin_src emacs-lisp
-  (global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+  ;;(global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+  (global-unset-key (kbd "<escape>"))
+  (global-set-key (kbd "<escape>") (kbd "C-g"))
+#+end_src
+
+*** Duplicate line
+#+begin_src emacs-lisp
+  (global-set-key "\C-c\C-d" "\C-a\C- \C-n\M-w\C-y")
 #+end_src
 
 ** LSP
 *** Autocomplete
-
-**** corfu
+**** company
 #+begin_src emacs-lisp
-  (use-package corfu
-  ;; Optional customizations
-  :custom
-  ;; (corfu-cycle t)                ;; Enable cycling for `corfu-next/previous'
-  (corfu-auto t)                 ;; Enable auto completion
-  ;; (corfu-separator ?\s)          ;; Orderless field separator
-  ;; (corfu-quit-at-boundary nil)   ;; Never quit at completion boundary
-  (corfu-quit-no-match 'separator)
-  (corfu-auto-delay 0.25)
-  (corfu-auto-prefix 3)
-  ;;(corfu-echo-mode)
-  ;; (corfu-preview-current nil)    ;; Disable current candidate preview
-  ;; (corfu-preselect 'prompt)      ;; Preselect the prompt
-  ;; (corfu-on-exact-match nil)     ;; Configure handling of exact matches
-  ;; (corfu-scroll-margin 5)        ;; Use scroll margin
-
-  ;; Recommended: Enable Corfu globally.
-  ;; This is recommended since Dabbrev can be used globally (M-/).
-  :init
-  (global-corfu-mode)
-  (corfu-popupinfo-mode)
-  (corfu-history-mode))
-#+end_src
-
-**** orderless
-#+begin_src emacs-lisp
-  (use-package orderless
+  (use-package company
     :init
-    ;; Configure a custom style dispatcher (see the Consult wiki)
-    ;; (setq orderless-style-dispatchers '(+orderless-dispatch)
-    ;;       orderless-component-separator #'orderless-escapable-split-on-space)
-    (setq completion-styles '(orderless basic)
-	  completion-category-defaults nil
-	  completion-category-overrides '((file (styles . (partial-completion))))))
-#+end_src
-
-**** cape
-#+begin_src emacs-lisp
-  (use-package cape
-    ;; Bind dedicated completion commands
-    ;; Alternative prefix keys: C-c p, M-p, M-+, ...
-    :bind (("C-c p p" . completion-at-point) ;; capf
-	   ("C-c p t" . complete-tag)        ;; etags
-	   ("C-c p d" . cape-dabbrev)        ;; or dabbrev-completion
-	   ("C-c p h" . cape-history)
-	   ("C-c p f" . cape-file)
-	   ("C-c p k" . cape-keyword)
-	   ("C-c p s" . cape-symbol)
-	   ("C-c p a" . cape-abbrev)
-	   ("C-c p l" . cape-line)
-	   ("C-c p w" . cape-dict)
-	   ("C-c p \\" . cape-tex)
-	   ("C-c p _" . cape-tex)
-	   ("C-c p ^" . cape-tex)
-	   ("C-c p &" . cape-sgml)
-	   ("C-c p r" . cape-rfc1345))
-    :init
-    ;; Add `completion-at-point-functions', used by `completion-at-point'.
-    ;; NOTE: The order matters!
-    ;;(add-to-list 'completion-at-point-functions #'cape-dabbrev)
-    (add-to-list 'completion-at-point-functions #'cape-file)
-    (add-to-list 'completion-at-point-functions #'cape-elisp-block)
-    (add-to-list 'completion-at-point-functions #'cape-history)
-    ;;RCS(add-to-list 'completion-at-point-functions #'cape-keyword)
-    ;;(add-to-list 'completion-at-point-functions #'cape-tex)
-    ;;(add-to-list 'completion-at-point-functions #'cape-sgml)
-    ;;(add-to-list 'completion-at-point-functions #'cape-rfc1345)
-    ;;(add-to-list 'completion-at-point-functions #'cape-abbrev)
-    ;;(add-to-list 'completion-at-point-functions #'cape-dict)
-    ;;(add-to-list 'completion-at-point-functions #'cape-symbol)
-    ;;(add-to-list 'completion-at-point-functions #'cape-line)
-    )
+    (setq company-minimum-prefix-length 2)
+    ;;(setq company-auto-complete nil)
+    (setq company-idle-delay 0)
+    (setq company-require-match 'never)
+    (global-set-key (kbd "M-c") 'company-complete)
+    ;;(setq tab-always-indent 'complete)
+    :config
+    (global-company-mode))
 #+end_src
 
 *** Eglot
+
 #+begin_src emacs-lisp
   (use-package eglot
     :config
-    (add-hook 'prog-mode-hook #'eglot-ensure)
+    (add-hook 'prog-mode-hook #'eglot-ensure))
 
     ;; Undo the Eglot modification of completion-category-defaults
-    (with-eval-after-load 'eglot
-      (setq completion-category-defaults nil))
+    ;;(with-eval-after-load 'eglot
+    ;;  (setq completion-category-defaults nil))
 
     ;; Enable cache busting, depending on if your server returns
     ;; sufficiently many candidates in the first place.
-    (advice-add 'eglot-completion-at-point :around #'cape-wrap-buster))
+    ;;(advice-add 'eglot-completion-at-point :around ;;#'cape-wrap-buster))
 #+end_src
 
 ** Themes
@@ -244,8 +213,8 @@
     :config
     ;; Global settings (defaults)
     (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
-	  doom-themes-enable-italic t) ; if nil, italics is universally disabled
-    ;;(load-theme 'doom-material-dark t)
+          doom-themes-enable-italic t) ; if nil, italics is universally disabled
+    (load-theme 'doom-one t)
 
     ;; Enable flashing mode-line on errors
     (doom-themes-visual-bell-config)
@@ -262,14 +231,19 @@
 #+begin_src emacs-lisp
   (use-package doom-modeline
     :init (doom-modeline-mode 1))
-  ;; :config (setq doom-modeline-height 21))
+  ;; :config (setq doom-modeline-height 22))
 #+end_src
 
 *** ef-themes
 #+begin_src emacs-lisp
-  (use-package ef-themes
-    :config
-    (load-theme 'ef-summer t))
+  ;;(use-package ef-themes)
+    ;;:config
+    ;;(load-theme 'ef-summer t))
+#+end_src
+
+*** gruvbox
+#+begin_src emacs-lisp
+  ;;(use-package gruvbox-theme)
 #+end_src
 
 ** Ivy
@@ -307,32 +281,33 @@
 ** Languages
 *** Web Dev
 #+begin_src emacs-lisp
-  (use-package web-mode
-    :mode
-    (
-     "\\.html?\\'"
-     "\\.php?\\'"
-     )
-    :config
-    (setq web-mode-enable-auto-closing t
-	  web-mode-enable-auto-opening t
-	  web-mode-enable-auto-pairing t
-	  web-mode-auto-close-style 2))
+;;  (use-package web-mode
+;;    :mode
+;;    (
+;;     "\\.html?\\'"
+;;     "\\.php?\\'"
+;;     )
+;;    :config
+;;    (setq web-mode-enable-auto-closing t
+;;          web-mode-enable-auto-opening t
+;;          web-mode-enable-auto-pairing t
+;;          web-mode-auto-close-style 2))
 #+end_src
 
 *** Rust
 #+begin_src emacs-lisp
-  (use-package rust-mode)
+;;  (use-package rust-mode)
 #+end_src
 
 *** Treesitter
 #+begin_src emacs-lisp
-  (use-package tree-sitter
-    :config
-    (global-tree-sitter-mode)
-    (add-hook 'tree-sitter-after-on-hook #'tree-sitter-hl-mode))
-
-  (use-package tree-sitter-langs)
+  ;;  (use-package tree-sitter
+  ;;    :config
+  ;;    (global-tree-sitter-mode)
+  ;;    (add-hook 'tree-sitter-after-on-hook #'tree-sitter-hl-mode))
+  ;;
+  ;;  (use-package tree-sitter-langs)
+  (require 'treesit)
 #+end_src
 
 ** Org
@@ -359,6 +334,29 @@
 
 ** Screen Saver
 #+begin_src emacs-lisp
-  (require 'zone)
-  (zone-when-idle 120) ;; in seconds
+  ;;(require 'zone)
+  ;;(zone-when-idle 120) ;; in seconds
+#+end_src
+
+** Window management
+*** ace-window
+#+begin_src emacs-lisp
+  (use-package ace-window
+    :config
+    (global-set-key (kbd "M-o") 'ace-window)
+    (setq aw-dispatch-always t))
+#+end_src
+
+*** resizing windows
+#+begin_src emacs-lisp
+  (global-set-key (kbd "S-C-<left>")  'shrink-window-horizontally)
+  (global-set-key (kbd "S-C-<right>") 'enlarge-window-horizontally)
+  (global-set-key (kbd "S-C-<down>")  'shrink-window)
+  (global-set-key (kbd "S-C-<up>")    'enlarge-window)
+#+end_src
+
+*** windmove
+Move between windows using ~M-left/right/up/down~.
+#+begin_src emacs-lisp
+  (windmove-default-keybindings 'meta)
 #+end_src
